fixed sonar issues